# test_framework

./: CMakeLists.txt  main.cpp  readme.md  test_ci_template.yml  test_framework.cmake
CI/: README.md  build-and-test.yml
example/: CMakeLists.txt  README.md
example/product/: math_util.cpp  math_util.h
example/testcase/: testcase.cpp
lib/: gtest_cov.cmake
script/: framework_setup.ps1  framework_setup.sh  testcase_build.ps1  testcase_build.sh  testcase_run.ps1  testcase_run.sh
script/vscode_cfg/: launch.json  tasks.json
testcase/: FsmTest.puml  cli_raw.cpp  dfifo.cpp  fsm.cpp  siso_fifo_nosplit.cpp  siso_fifo_split.cpp
